# weatherbot

./: Cargo.toml  README.md
--serenity/: Cargo.toml
src/: main.rs
src/commands/: forecast.rs  mod.rs  tomorrow.rs  weather.rs
