[package]
name = "weatherbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.46.0"
shuttle-serenity = "0.46.0"
tracing = "0.1.37"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies", "blocking"] }
tokio-macros = "2.3.0"
serde_json = "1.0.119"
serde = { version = "1.0.203", features = ["derive"] }
